Fix alignment

--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
   display: flex;
   padding: 12px 24px;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   gap: 24px;
   align-self: stretch;
   background: rgba(19, 19, 19, 0.00);
